# ticket-plugin

./: .dockerignore  .gitignore  .harvester.env.example  .harvester.toml.example  .mcp.json  .project-conf.toml  CHANGELOG.md  LICENSE  Makefile  PRIVACY.md  README.md  install-for-claude-desktop-local.sh  install-for-claude-desktop.sh  search.sh
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: repo-conventions.md
commands/: ticket-archive.md  ticket-pause.md  ticket-start.md  ticket-update.md
design/: README.md  github-backend-primitives.md  multi-ticket.md  pause-update.md  project-conf-toml.md  rag-service-testing.md  ticket-doc-sync.md  ticket-gh-init.md  ticket-rag.md
docker/postgres-pgvector/: Dockerfile  README.md  entrypoint.sh  fetch-models.sh  init-schema.sh  init-trust-auth.sh  requirements.txt  verify-bill15.sh  verify-bill17.sh  verify-bill18.sh  verify-bill37.sh
docker/postgres-pgvector/app/: main.py
docker/postgres-pgvector/schema/: 001_ticket_chunks.sql  002_add_project_column.sql
docs/: session-continuation.md
mcp-server/: README.md  requirements.txt  server.py
rag-service/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
rag-service/rag_service/: __init__.py  db.py  embed.py  main.py  models.py  query_preprocessor.py  rerank.py  search.py
rag-service/rag_service/harvesters/: _common.py  linear.py
rag-service/scripts/: dump_tickets.py  harvest_range.py
rag-service/tests/: conftest.py  test_chunking_headings.py  test_embed.py  test_harvesters_common.py  test_healthz.py  test_linear_harvester.py  test_query_preprocessor.py  test_rerank.py  test_search.py  test_search_helpers.py  test_search_note.py
skills/archive/: SKILL.md
skills/doc-sync/: SKILL.md
skills/document/: SKILL.md
skills/merge/: SKILL.md
skills/pause/: SKILL.md
skills/plan/: SKILL.md
skills/pr/: SKILL.md
skills/start/: SKILL.md
skills/update/: SKILL.md
